--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -331,6 +331,7 @@
     flex-direction: column;
     width: 84%;
     align-items: flex-start;
+    row-gap: 1vh;
 }
 
 .BgOverlay {
@@ -388,7 +389,10 @@
     padding: 1.5vh 11vw;
     font-size: 1.1rem;
     font-weight: 600;
-    border-radius:4%;
+    border-radius: 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .paymentOptions input[type="radio"]{
@@ -399,3 +403,130 @@
     .paymentOptions input[type="radio"]:checked + label {
         color: #6775F4;
     }
+
+.primery-button {
+    border-radius: 0.25rem;
+    background: #6775F4;
+    color: #6775F4;
+    width: 15.375rem;
+    height: 2.3rem;
+    flex-shrink: 0;
+    color: #F9F9F9;
+    text-align: center;
+    /* h2 - sub titles */
+    font-family: Heebo;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border: none;
+}
+
+.outerPaymentMethodsAndBtn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3vh;
+    width: 100%;
+    margin-top: 1vh;
+}
+
+.straightDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 1vh;
+}
+
+.outerGallery {
+    background-color: #F9F9F9;
+    border-radius: 0.25rem;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 3vh;
+    width: 100%;
+    padding: 1vh 0;
+    padding-top: 2vh;
+}
+
+.tag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+}
+
+.pageDots {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dot {
+    height: 0.5rem;
+    width: 0.5rem;
+    margin: 0 5px;
+    background-color: #D6D9F1;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+}
+
+    .dot.active {
+        background-color: #6775F4;
+    }
+
+.galleryArrow {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+.disBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    opacity: 25%;
+}
+
+.outerBtnAndDots {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 3vh 2vw;
+}
+
+
+.outerGalleryAndNav {
+    background-color: #F9F9F9;
+    border-radius: 0.25rem;
+    border: 1px solid #D6D9F1;
+    box-shadow: 0px 36px 10px 0px rgba(79, 89, 176, 0.00), 0px 23px 9px 0px rgba(79, 89, 176, 0.01), 0px 13px 8px 0px rgba(79, 89, 176, 0.03), 0px 6px 6px 0px rgba(79, 89, 176, 0.05), 0px 1px 3px 0px rgba(79, 89, 176, 0.06);
+    width: 100%;
+}
