--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -46,15 +46,21 @@
                         <div class="outerDetails">
                             <div class="innerPaddingDiv">
                                 <div class="outerTitleAndDate">
-                                    <input class="titleBox" type="text" @bind="titleInput" @oninput="TransTitleLengthCounter" maxlength="18" minlength="2" />
-                                    @if (titleInput.Length > 2 && titleInput.Length < 19)
-                                    {
-                                        <span>@titleInputLength/18</span>
-                                    }
-                                    else if (titleInput.Length < 2)
-                                    {
-                                        <span style="color:red">0/18</span>
-                                    }
+                                    <div class="outerTitleAndCounter">
+                                        <div class="input-container">
+                                            <input class="titleBox" type="text" @bind="titleInput" @oninput="TransTitleLengthCounter" maxlength="18" minlength="2" />
+                                            <div class="counter">
+                                                @if (titleInput.Length > 2 && titleInput.Length < 19)
+                                                {
+                                                    <span>@titleInput.Length/18</span>
+                                                }
+                                                else if (titleInput.Length < 2)
+                                                {
+                                                    <span>0/18</span>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
                                     <input type="date" @bind="newTransaction.transDate" class="custom-date-input" />
                                 </div>
 
@@ -435,7 +441,7 @@ resetMonthValues = !resetMonthValues">
 
                     @if (isButtomDropDownOpen)
                     {
-                        
+
                         <div class="outerDetails">
                             <div class="innerPaddingDiv">
                                 <div class="outerTitleAndDateAndName">
@@ -552,7 +558,7 @@ resetMonthValues = !resetMonthValues">
                                 <div class="outerTitleAndDateAndName">
                                     <span class="titleName">פירוט:</span>
                                     <textarea class="description" @bind="newTransaction.description" maxlength="60" @oninput="TransDescLengthCounter"></textarea>
-                                    @if(descLength>0)
+                                    @if (descLength > 0)
                                     {
                                         <span>@descLength/60</span>
                                     }
@@ -584,7 +590,7 @@ resetMonthValues = !resetMonthValues">
                         <div class="outerSaveBtns">
                             <button class="primery-button" @onclick="saveAndRepeatTransactions" disabled>שמירה והזנה נוספת</button>
                             <button class="secondery-button" @onclick="saveAndEndTransactions" disabled>שמירה וסיום</button>
-                                         <span>אורך שם ההזנה לא תקין.</span>
+                            <span>אורך שם ההזנה לא תקין.</span>
                         </div>
                     }
                     else if (newTransaction.transValue <= 0)
@@ -592,7 +598,7 @@ resetMonthValues = !resetMonthValues">
                         <div class="outerSaveBtns">
                             <button class="primery-button" @onclick="saveAndRepeatTransactions" disabled>שמירה והזנה נוספת</button>
                             <button class="secondery-button" @onclick="saveAndEndTransactions" disabled>שמירה וסיום</button>
-                                         <span>סך ההזנה לא תקין.</span>
+                            <span>סך ההזנה לא תקין.</span>
                         </div>
                     }
                     else if (newTransaction.valueType == "" || newTransaction.valueType == null)
@@ -600,7 +606,7 @@ resetMonthValues = !resetMonthValues">
                         <div class="outerSaveBtns">
                             <button class="primery-button" @onclick="saveAndRepeatTransactions" disabled>שמירה והזנה נוספת</button>
                             <button class="secondery-button" @onclick="saveAndEndTransactions" disabled>שמירה וסיום</button>
-                                         <span>לא נבחר אמצעי תשלום.</span>
+                            <span>לא נבחר אמצעי תשלום.</span>
                         </div>
                     }
 
@@ -625,87 +631,87 @@ resetMonthValues = !resetMonthValues">
                                 }
 
                             }
-                            
+
                         }
                     }
                 }
 
-                        @if (overdraftDetected)
-                        {
-                            <div>
-                                <h3>חרגת...</h3>
-                                <p>נראה שהוצאת ב @subCategoryTitle @closeOverdraftOpts[closeOverdraftOpts.Count-1].remainingBudget ₪ </p>
-                                <p>שזה @currentGap ₪ יותר </p>
-                                <p>מהתקציב שהגדרת: @closeOverdraftOpts[closeOverdraftOpts.Count-1].monthlyPlannedBudget ₪ </p>
-                                <p>כדאי להגדיל את התקציב.</p>
-                                <p>הסכום שאני רוצה להעביר:</p>
-                                <input type="number" @bind="currentGap" min="@currentGap" /><span>₪</span>
-                                <p>מאיזו תת קטגוריה יועבר הסכום?</p>
+                @if (overdraftDetected)
+                {
+                    <div>
+                        <h3>חרגת...</h3>
+                        <p>נראה שהוצאת ב @subCategoryTitle @closeOverdraftOpts[closeOverdraftOpts.Count-1].remainingBudget ₪ </p>
+                        <p>שזה @currentGap ₪ יותר </p>
+                        <p>מהתקציב שהגדרת: @closeOverdraftOpts[closeOverdraftOpts.Count-1].monthlyPlannedBudget ₪ </p>
+                        <p>כדאי להגדיל את התקציב.</p>
+                        <p>הסכום שאני רוצה להעביר:</p>
+                        <input type="number" @bind="currentGap" min="@currentGap" /><span>₪</span>
+                        <p>מאיזו תת קטגוריה יועבר הסכום?</p>
 
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th>העברה מ:</th>
-                                            <th>העברה ל:</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <select @onchange="HandleChange">
-                                                    @foreach (OverBudgetToShow subcategoryOpt in closeOverdraftOpts)
-                                                    {
-                                                        @if (subcategoryOpt.id != subCategoryIDTOGet)
-                                                        {
-                                                            <option value="@subcategoryOpt.subCategoryTitle">
-                                                                @subcategoryOpt.subCategoryTitle
-                                                            </option>
-                                                        }
-                                                    }
-                                                </select>
-                                            </td>
-                                            <td>
-                                                @(
-                                                    overDraftSubCategory.subCategoryTitle = closeOverdraftOpts[closeOverdraftOpts.Count - 1].subCategoryTitle
-                                                    )
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>העברה מ:</th>
+                                    <th>העברה ל:</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <select @onchange="HandleChange">
+                                            @foreach (OverBudgetToShow subcategoryOpt in closeOverdraftOpts)
+                                            {
+                                                @if (subcategoryOpt.id != subCategoryIDTOGet)
+                                                {
+                                                    <option value="@subcategoryOpt.subCategoryTitle">
+                                                        @subcategoryOpt.subCategoryTitle
+                                                    </option>
+                                                }
+                                            }
+                                        </select>
+                                    </td>
+                                    <td>
+                                        @(
+                                            overDraftSubCategory.subCategoryTitle = closeOverdraftOpts[closeOverdraftOpts.Count - 1].subCategoryTitle
+                                            )
 
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <p>תקציב:</p>
-                                            <p>נוכחי: @chosenSubCategory.monthlyPlannedBudget</p>
-                                            <p>
-                                                עתידי: @(
-                                             chosenSubCategory.monthlyPlannedBudget - currentGap
-                                             )
-                                            </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <p>תקציב:</p>
+                                    <p>נוכחי: @chosenSubCategory.monthlyPlannedBudget</p>
+                                    <p>
+                                        עתידי: @(
+                                     chosenSubCategory.monthlyPlannedBudget - currentGap
+                                     )
+                                    </p>
 
-                                        </tr>
-                                        <tr>
-                                            <p>תקציב:</p>
-                                            <p>
-                                                נוכחי: @(
-                                             closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget
-                                             )
-                                            </p>
-                                            <p>
-                                                עתידי: @(
-                                             closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget + currentGap
-                                             )
-                                            </p>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <button @onclick="manageBudgetsToTranfer">העברה</button>
-                                <button @onclick="@(async () => await closeOverdraftWindow())">אטפל בהמשך</button>
+                                </tr>
+                                <tr>
+                                    <p>תקציב:</p>
+                                    <p>
+                                        נוכחי: @(
+                                     closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget
+                                     )
+                                    </p>
+                                    <p>
+                                        עתידי: @(
+                                     closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget + currentGap
+                                     )
+                                    </p>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <button @onclick="manageBudgetsToTranfer">העברה</button>
+                        <button @onclick="@(async () => await closeOverdraftWindow())">אטפל בהמשך</button>
 
-                                    <div class="outerSaveBtns">
-                                        <button class="primery-button" @onclick="updateExistingTrans">שמירה וסיום</button>
-                                    </div>
-                            </div>
-                        }
+                        <div class="outerSaveBtns">
+                            <button class="primery-button" @onclick="updateExistingTrans">שמירה וסיום</button>
+                        </div>
+                    </div>
+                }
 
-                
+
                 @if (overdraftDetected)
                 {
                     <div>
@@ -2146,7 +2152,7 @@ resetMonthValues = !resetMonthValues">
     private void TransDescLengthCounter(ChangeEventArgs e)
     {
         string description = "";
-        description  = e.Value.ToString();
+        description = e.Value.ToString();
         newTransaction.description = description;
         descLength = description.Length;
     }
