--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -362,7 +362,9 @@ input:checked + .slider:before {
     position: fixed;
     bottom: 0;
     width: 100%;
-    will-change: transform; /* Optimizes the animation */
+    will-change: transform; 
+    transition: opacity 0.5s ease-in-out; /* Smooth transition for the opacity */
+    
 }
 
 #nav-hidden {
@@ -704,3 +706,7 @@ ol li::marker {
     left: 50%;
     width: 111%;
 }
+
+/*.bottom-nav {
+    display: block;*/ /* Make sure it's visible initially */
+/*}*/
