--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -710,3 +710,45 @@ ol li::marker {
 /*.bottom-nav {
     display: block;*/ /* Make sure it's visible initially */
 /*}*/
+
+.mainTitle{
+    font-weight:700;
+    font-size:1.3rem;
+
+}
+
+.weeklyTransAmount {
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
+.outerInfoText{
+
+}
+
+.closePopUpBtn {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+
+
+.wellDonePopUp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: right;
+    height: 100%;
+    justify-content: space-around;
+}
+
+.outerInfoText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.statusText {
+    text-align: center;
+}
