--- a/Client/Pages/StreakProgressPage.razor
+++ b/Client/Pages/StreakProgressPage.razor
@@ -7,48 +7,66 @@
 @inject HttpClient Http
 @inject NavigationManager Nav
 @inject DateService DateService
-
-
-<button @onclick="goToHomePage">🔙</button>
-<button>Profile avatar</button>
-<br/>
-<h2>ההתקדמות שלי</h2>
-<p>כל הצעדים בדרך לחסכון</p>
-<div id="transAmountForNextRank">
-    @if (neededTransAmount<96)
-    {
-        
-        <p>עוד @neededTransAmount הזנות עד לדרגה הבאה</p>
-    }
-    else
-    {
-        <p>הגעת לדרגה הגבוהה ביותר! אליפות!</p>
-    }
+<div class="TopProfileAndBack">
+    <div class="profileAndBack">
+        <button class="backbtn" @onclick="goToHomePage"><img src="../css/images/back-repeated.svg" </button>
+        <button class="profilePic"></button>
+    </div>
 </div>
-<div id="ranks">
-    @for (int i = 0; i < streakStatusOpt.Count; i++)
-    {
-        if (i<= currentUserStreakIndex)
-        {
-        <div>
-            <img src="@rankPicSrc[i]"><img/>
-            <h3>@streakStatusOpt[i]</h3>
-            <p>נפתח אחרי <b>@weekAmountForRank[i]</b></p>
-            </div>
-        }
-        else
-        {
-            @*add css that will make this look locked- for now I painted the text purple so we'll see the difference*@
-            <div>
-                <img src="@rankPicSrc[i]"><img />
-                <h3>@streakStatusOpt[i]</h3>
-                <p style="color: cornflowerblue">נפתח אחרי <b>@weekAmountForRank[i]</b></p>
-            </div>
-        }
-
-    }
+<div class="wrapperContent">
+    <div class="content">
+        <div style="font-weight:700; font-size:1rem;">ההתקדמות שלי</div>
+        <div style="font-weight:400">כל הצעדים בדרך לחסכון</div>
+        <div id="transAmountForNextRank">
+        </div>
+    </div>
 </div>
+<div class="topRanksAndBanner">
+@if (neededTransAmount < 96)
+{
+    <div>
+        <div class="centringTop">
+            <div class="topNextRank">עוד <span style="color:#6775F4">@neededTransAmount</span> הזנות עד לדרגה הבאה</div>
+        </div>
+    </div>
+}
+else
+{
+    <p>הגעת לדרגה הגבוהה ביותר! אליפות!</p>
+}
 
+<div class="wrapperContent">
+    <div class="content">
+        <div id="ranks">
+            @for (int i = 0; i < streakStatusOpt.Count; i++)
+            {
+                if (i <= currentUserStreakIndex)
+                {
+                    <div class="allRank">
+                        <img style="width:25%" src="@rankPicSrc[i]"><img />
+                        <div class="rankTxt">
+                            <h3 class="rankInnerText">@streakStatusOpt[i]</h3>
+                            <p class="rankInnerText2">נפתח אחרי <b>@weekAmountForRank[i]</b></p>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @*add css that will make this look locked- for now I painted the text purple so we'll see the difference*@
+                    <div class ="allRank">
+                        <img style="width:25%" src="@rankPicSrc[i]"><img />
+                        <div class="rankTxt">
+                            <h3 class="rankInnerText">@streakStatusOpt[i]</h3>
+                            <p class="rankInnerText2">נפתח אחרי <b>@weekAmountForRank[i]</b></p>
+                        </div>
+                    </div>
+                }
+
+            }
+        </div>
+    </div>
+</div>
+</div>
 @code {
     [Parameter]
     public int userID { get; set; }
@@ -87,7 +105,7 @@
                 //Console.WriteLine("streak status is -" + currentStreak.AllWeeksValid);
 
                 string streakStatus = streakStatusCheck(currentStreak.streak_length);
-                if (currentStreak.streak_length != null && currentStreak.streak_length > 0 && currentStreak.current_streak_group==true)
+                if (currentStreak.streak_length != null && currentStreak.streak_length > 0 && currentStreak.current_streak_group == true)
                 {
 
                     var getCurrentStatRes = await Http.GetAsync("api/Present/getUserStreakStatus/" + userID);
@@ -109,7 +127,7 @@
                                     currentUserStreakIndex = streakStatInpage;
                                 }
                             }
-                            else 
+                            else
                             {
                                 var updateStreak = await Http.GetAsync("api/Present/updateStreakStat/" + userID + "/" + streakStatus);
                                 if (updateStreak.IsSuccessStatusCode)
@@ -155,11 +173,11 @@
         int rankMinTransCount = 3;
         if (weekAmount <= 1 && weekAmount < 2)
         {
-            if (weekAmount<1)
+            if (weekAmount < 1)
             {
                 rankMinTransCount = 3;
             }
-            else if (weekAmount==1)
+            else if (weekAmount == 1)
             {
                 rankMinTransCount = 6;
             }
